--- a/dogs/dogs.html
+++ b/dogs/dogs.html
@@ -1,107 +1,110 @@
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Våra Hundar</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<link rel="stylesheet" type="text/css" href="dogs.css">
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Glada Tassar | Våra Hundar</title>
+		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<link rel="stylesheet" type="text/css" href="dogs.css">
+	</head>
+	<body>
 
-<div class="container">
-	<div class="logo">
-		<img src="../img/logo/dog-logo.png" alt="Dog logo" class="logo-image"></img>
-		<h1 class="logo-header">Hunddagiset<br>Glada Tassar</h1>
-	</div>
+		<div class="container">
+			<div class="logo">
+				<img src="../img/logo/dog-logo.png" alt="Dog logo" class="logo-image"></img>
+				<h1 class="logo-header">Hunddagiset<br>Glada Tassar</h1>
+			</div>
 
-	<nav class="navbar">
-		<a href="../index.html">Hem</a>
-		<a href="../service/service.html">Priser</a>
-		<a href="../contact/contact.html">Kontakt</a>
-		<a href="dogs.html">Våra Hundar</a>
-		<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
-	</nav>
+			<nav class="navbar">
+				<a href="../index.html">Hem</a>
+				<a href="../service/service.html">Priser</a>
+				<a href="../contact/contact.html">Kontakt</a>
+				<a href="dogs.html">Våra Hundar</a>
+				<a href="../gallery/gallery.html">Galleri</a>
+				<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
+			</nav>
 
-	<section class="cycle-images-container">
-		<div class="cycle-images fade">
-			<img src="../img/dogs/max.jpg" class="dog-cycle"></img>
+			<section class="cycle-images-container">
+				<div class="cycle-images fade">
+					<img src="../img/dogs/max.jpg" class="dog-cycle"></img>
+				</div>
+
+				<div class="cycle-images fade">
+					<img src="../img/dogs/maxOne.jpg" class="dog-cycle"></img>
+				</div>
+
+				<div class="cycle-images fade">
+					<img src="../img/dogs/maxTwo.jpg" class="dog-cycle"></img>
+				</div>
+			</section>
+
+			<section class="header">
+				<h1>VÅRA HUNDAR!</h1>
+			</section>
+
+			<section class="text-one">
+				<h2>MAX</h2>
+				<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
+				Älskar att springa runt och leka med dom andra hundarna.</p>
+			</section>
+
+			<section class="image-one">
+				<img src="../img/allDogs/max.jpg" alt="Bild på Max" class="main-image-one"></img>
+			</section>
+
+			<section class="image-two">
+				<img src="../img/allDogs/bonzo.jpg" alt="Bild på Bonzo" class="main-image-two"></img>
+			</section>
+
+			<section class="text-two">
+				<h2>BONZO</h2>
+				<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
+				Älskar att springa runt och leka med dom andra hundarna.</p>
+			</section>
+
+			<section class="image-three">
+				<img src="../img/allDogs/ida.jpg" alt="Bild på Ida" class="main-image-three"></img>
+			</section>
+
+			<section class="text-three">
+				<h2>IDA</h2>
+				<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
+				Älskar att springa runt och leka med dom andra hundarna.</p>
+			</section>
+
+			<footer class="footer">
+				<section class="contact-footer">
+					<h3>KONTAKT</h3>
+					<b>Hunddagiset Glada Tassar</b>
+		            <br>
+		            Stockholmvägen 48B,
+					<br>
+					198 32, Stockholm
+					<br>
+		            contact@gladatassar.com
+		            <br>
+		            08-4593032
+		            <br>
+				</section>
+				<section class="navigate-footer">
+					<h3>NAVIGERA</h3>
+					<a href="../index.html">Hem</a><br>
+					<a href="../service/service.html">Priser</a><br>
+					<a href="../contact/contact.html">Kontakt</a><br>
+					<a href="dogs.html">Våra Hundar</a><br>
+					<a href="../gallery/gallery.html">Galleri</a>
+				</section>
+				<section class="times-footer">
+					<h3>ÖPPETIDER</h3>
+					Hunddagiset är öppet måndag till fredag från kl.06.30 till 18.00.
+					<br>
+					Afton och röda dagar är det stängt.
+					<br>
+					Övrig tid, enligt överenskommelse.
+				</section>
+			</footer>
 		</div>
-
-		<div class="cycle-images fade">
-			<img src="../img/dogs/maxOne.jpg" class="dog-cycle"></img>
-		</div>
-
-		<div class="cycle-images fade">
-			<img src="../img/dogs/maxTwo.jpg" class="dog-cycle"></img>
-		</div>
-	</section>
-
-	<section class="header">
-		<h1>VÅRA HUNDAR!</h1>
-	</section>
-
-	<section class="text-one">
-		<h2>MAX</h2>
-		<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
-		Älskar att springa runt och leka med dom andra hundarna.</p>
-	</section>
-
-	<section class="image-one">
-		<img src="../img/allDogs/max.jpg" alt="Bild på Max" class="main-image-one"></img>
-	</section>
-
-	<section class="image-two">
-		<img src="../img/allDogs/bonzo.jpg" alt="Bild på Bonzo" class="main-image-two"></img>
-	</section>
-
-	<section class="text-two">
-		<h2>BONZO</h2>
-		<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
-		Älskar att springa runt och leka med dom andra hundarna.</p>
-	</section>
-
-	<section class="image-three">
-		<img src="../img/allDogs/ida.jpg" alt="Bild på Ida" class="main-image-three"></img>
-	</section>
-
-	<section class="text-three">
-		<h2>IDA</h2>
-		<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
-		Älskar att springa runt och leka med dom andra hundarna.</p>
-	</section>
-
-	<footer class="footer">
-		<section class="contact-footer">
-			<h3>KONTAKT</h3>
-			<b>Hunddagiset Glada Tassar</b>
-            <br>
-            Stockholmvägen 48B,
-			<br>
-			198 32, Stockholm
-			<br>
-            contact@gladatassar.com
-            <br>
-            08-4593032
-            <br>
-		</section>
-		<section class="navigate-footer">
-			<h3>NAVIGERA</h3>
-			<a href="../index.html">Hem</a><br>
-			<a href="../service/service.html">Priser</a><br>
-			<a href="../contact/contact.html">Kontakt</a><br>
-			<a href="dogs.html">Våra Hundar</a><br>
-		</section>
-		<section class="times-footer">
-			<h3>ÖPPETIDER</h3>
-			Hunddagiset är öppet måndag till fredag från kl.06.30 till 18.00.
-			<br>
-			Afton och röda dagar är det stängt.
-			<br>
-			Övrig tid, enligt överenskommelse.
-		</section>
-	</footer>
-</div>
-
-</body>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="../js/main.js"></script>
+	</body>
 </html>
