--- a/service/service.html
+++ b/service/service.html
@@ -1,126 +1,128 @@
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tjänster</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<link rel="stylesheet" type="text/css" href="service.css">
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Glada Tassar | Tjänster</title>
+		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<link rel="stylesheet" type="text/css" href="service.css">
+	</head>
+	<body>
+		<div class="container">
+			<div class="logo">
+				<img src="../img/logo/dog-logo.png" alt="Dog logo" class="logo-image"></img>
+				<h1 class="logo-header">Hunddagiset<br>Glada Tassar</h1>
+			</div>
 
-<div class="container">
-	<div class="logo">
-		<img src="../img/logo/dog-logo.png" alt="Dog logo" class="logo-image"></img>
-		<h1 class="logo-header">Hunddagiset<br>Glada Tassar</h1>
-	</div>
+			<nav class="navbar">
+				<a href="../index.html">Hem</a>
+				<a href="service.html">Priser</a>
+				<a href="../contact/contact.html">Kontakt</a>
+				<a href="../dogs/dogs.html">Våra Hundar</a>
+				<a href="../gallery/gallery.html">Galleri</a>
+				<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
+			</nav>
 
-	<nav class="navbar">
-		<a href="../index.html">Hem</a>
-		<a href="service.html">Priser</a>
-		<a href="../contact/contact.html">Kontakt</a>
-		<a href="../dogs/dogs.html">Våra Hundar</a>
-		<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
-	</nav>
+			<section class="cycle-images-container">
+				<div class="cycle-images fade">
+					<img src="../img/dogs/max.jpg" class="dog-cycle"></img>
+				</div>
 
-	<section class="cycle-images-container">
-		<div class="cycle-images fade">
-			<img src="../img/dogs/max.jpg" class="dog-cycle"></img>
+				<div class="cycle-images fade">
+					<img src="../img/dogs/maxOne.jpg" class="dog-cycle"></img>
+				</div>
+
+				<div class="cycle-images fade">
+					<img src="../img/dogs/maxTwo.jpg" class="dog-cycle"></img>
+				</div>
+			</section>
+
+			<section class="header">
+				<h1>PRISER</h1>
+			</section>
+
+			<section class="text-one">
+				<ul>
+					<li>Om ni har flera hundar rabatteras priserna med 50% för de resterande hundarna.</li>
+					<li>Om ni vill ha upphämtning/avlämning kostar det 500kr/mån extra.</li>
+					<li>Om ni har en valp (yngre än 1 år) kostar det 500kr/mån extra.</li>
+				</ul>
+				<table class="price-table">
+					<thead>
+						<tr>
+							<th>Heltid</th>
+							<th>Deltid</th>
+							<th>Daglig</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>2-3 dagar/veckan</td>
+							<td>5 dagar/vecka</td>
+							<td>-</td>
+						</tr>
+						<tr>
+							<td>2000-2500kr/mån</td>
+							<td>3200kr/mån</td>
+							<td>400kr/dag</td>
+						</tr>
+						<tr>
+							<td>Färskfoder Lunch</td>
+							<td>Färskfoder Lunch</td>
+							<td>Medtag egen lunch</td>
+						</tr>
+						<tr>
+							<td>Delat rum med vald grupp</td>
+							<td>Delat rum med vald grupp</td>
+							<td>Tilldelat rum</td>
+						</tr>
+						<tr>
+							<td>Minst 2 långpromeander per dag</td>
+							<td>Minst 2 långpromeander per dag</td>
+							<td>Minst 2 långpromeander per dag</td>
+						</tr>
+						<tr>
+							<td>Social stimulans</td>
+							<td>Social stimulans</td>
+							<td>Social stimulans</td>
+						</tr>
+					</tbody>
+				</table>
+			</section>
+
+			<footer class="footer">
+				<section class="contact-footer">
+					<h3>KONTAKT</h3>
+					<b>Hunddagiset Glada Tassar</b>
+		            <br>
+		            Stockholmvägen 48B,
+					<br>
+					198 32, Stockholm
+					<br>
+		            contact@gladatassar.com
+		            <br>
+		            08-4593032
+		            <br>
+				</section>
+				<section class="navigate-footer">
+					<h3>NAVIGERA</h3>
+					<a href="../index.html">Hem</a><br>
+					<a href="service.html">Priser</a><br>
+					<a href="../contact/contact.html">Kontakt</a><br>
+					<a href="../dogs/dogs.html">Våra Hundar</a><br>
+					<a href="../gallery/gallery.html">Galleri</a>
+				</section>
+				<section class="times-footer">
+					<h3>ÖPPETIDER</h3>
+					Hunddagiset är öppet måndag till fredag från kl.06.30 till 18.00.
+					<br>
+					Afton och röda dagar är det stängt.
+					<br>
+					Övrig tid, enligt överenskommelse.
+				</section>
+			</footer>
 		</div>
-
-		<div class="cycle-images fade">
-			<img src="../img/dogs/maxOne.jpg" class="dog-cycle"></img>
-		</div>
-
-		<div class="cycle-images fade">
-			<img src="../img/dogs/maxTwo.jpg" class="dog-cycle"></img>
-		</div>
-	</section>
-
-	<section class="header">
-		<h1>PRISER</h1>
-	</section>
-
-	<section class="text-one">
-		<ul>
-			<li>Om ni har flera hundar rabatteras priserna med 50% för de resterande hundarna.</li>
-			<li>Om ni vill ha upphämtning/avlämning kostar det 500kr/mån extra.</li>
-			<li>Om ni har en valp (yngre än 1 år) kostar det 500kr/mån extra.</li>
-		</ul>
-		<table class="price-table">
-			<thead>
-				<tr>
-					<th>Heltid</th>
-					<th>Deltid</th>
-					<th>Daglig</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>2-3 dagar/veckan</td>
-					<td>5 dagar/vecka</td>
-					<td>-</td>
-				</tr>
-				<tr>
-					<td>2000-2500kr/mån</td>
-					<td>3200kr/mån</td>
-					<td>400kr/dag</td>
-				</tr>
-				<tr>
-					<td>Färskfoder Lunch</td>
-					<td>Färskfoder Lunch</td>
-					<td>Medtag egen lunch</td>
-				</tr>
-				<tr>
-					<td>Delat rum med vald grupp</td>
-					<td>Delat rum med vald grupp</td>
-					<td>Tilldelat rum</td>
-				</tr>
-				<tr>
-					<td>Minst 2 långpromeander per dag</td>
-					<td>Minst 2 långpromeander per dag</td>
-					<td>Minst 2 långpromeander per dag</td>
-				</tr>
-				<tr>
-					<td>Social stimulans</td>
-					<td>Social stimulans</td>
-					<td>Social stimulans</td>
-				</tr>
-			</tbody>
-		</table>
-	</section>
-
-	<footer class="footer">
-		<section class="contact-footer">
-			<h3>KONTAKT</h3>
-			<b>Hunddagiset Glada Tassar</b>
-            <br>
-            Stockholmvägen 48B,
-			<br>
-			198 32, Stockholm
-			<br>
-            contact@gladatassar.com
-            <br>
-            08-4593032
-            <br>
-		</section>
-		<section class="navigate-footer">
-			<h3>NAVIGERA</h3>
-			<a href="../index.html">Hem</a><br>
-			<a href="service.html">Priser</a><br>
-			<a href="../contact/contact.html">Kontakt</a><br>
-			<a href="../dogs/dogs.html">Våra Hundar</a><br>
-		</section>
-		<section class="times-footer">
-			<h3>ÖPPETIDER</h3>
-			Hunddagiset är öppet måndag till fredag från kl.06.30 till 18.00.
-			<br>
-			Afton och röda dagar är det stängt.
-			<br>
-			Övrig tid, enligt överenskommelse.
-		</section>
-	</footer>
-</div>
-
-</body>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="../js/main.js"></script>
+	</body>
 </html>
