fixed some text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Glada Tassar | Hem</title>
-		<link rel="shortcut icon" type="image/jpg" href="img/favicon.png"/>
+		<link rel="shortcut icon" type="image/jpg" href="img/logo/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	    <link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
@@ -22,7 +22,7 @@
 				<a href="contact/contact.html">Kontakt</a>
 				<a href="dogs/dogs.html">Våra Hundar</a>
 				<a href="gallery/gallery.html">Galleri</a>
-				<span class="contact-info">contact@gladatassar.com 08-4593032</span>
+				<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
 			</nav>
 
 			<section class="cycle-images-container">
@@ -69,12 +69,12 @@
 			</section>
 
 			<section class="image-one">
-				<img src="https://previews.dropbox.com/p/thumb/ABNVDGmugOEI5PXrQjsqSgTS8Jr2EIQPbpH7qjiXJ6V_XnhUcOPWnHdfcZXZ1qSlkwcoUxOCr1HGBYoED__ADX0bUS-UuSxFmYOOSHS7DASOBhvqPB8lW5f3B3FhYx38V_rDlpQApEdMQIDBCJ_QPnzHRqS-xJIHP_BsrMC-gy-whPA55t-Of-EQWyBnusEmPdjU0ShnbRP9Q7wTaaZF5LyQ9OOQr1gn3VqigEQidSAMQhLKISWgaKLGxuM4C5Hha4iHgyfwuNcu7x2Q0trYCaCQUfQzKyFJw74DFNXxdjBrvdHYf8uc-WeUoZnWIftPpm6sFyVWdIcQz8TUv6uzJORLM23N_IiLcWFp0lRo86rlLA/p.jpeg?fv_content=true&size_mode=5"
+				<img src="img/dogsIndex/ida.jpg"
 				class="main-image-one"></img>
 			</section>
 
 			<section class="image-two">
-				<img src="https://previews.dropbox.com/p/thumb/ABORpxs3yazswF_gq_9Ck0Wmocdc9ESLCPcdzw18fDci2U68CE4J_kg5w544Mbf9vKzj-msTWaLvDYXtOXQqjLtSdZrRhfxxjFgKYL7vUeGVWFUOPrX0dvR3Ibn8zT2ZWQoQt0Bb6HVT26-KnfIp_L00-_azIdT3V3rktjMlqc5PbqGKhRwLmw4JRGGrVWsFbuOczziezH_buF0CU0QyfyT8C9eOmt7Z-Af3MUQX80Suh6FXaI7c_SBcF0fF24G9Q0MZ6BGj3LZN_pN5Vwx6GIB1059I9qqhLHRJtXTw_qSxYuWqhfq-uaI30WjufdeNci9kDKOimyLOAILyH_z11CU-B7yGtDdVjSQTwV9C6MIS4Q/p.jpeg?size=2048x1536&size_mode=3"
+				<img src="img/dogsIndex/max.jpg"
 				class="main-image-two"></img>
 			</section>
 
