--- a/contact/contact.html
+++ b/contact/contact.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Glada Tassar | Kontakt</title>
-		<link rel="shortcut icon" type="image/jpg" href="../img/favicon.png"/>
+		<link rel="shortcut icon" type="image/jpg" href="../img/logo/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 		<link rel="stylesheet" type="text/css" href="contact.css">
 	</head>
@@ -33,7 +33,7 @@
 
 				<div class="cycle-images fade">
 					<img src="../img/cycleDogs/idaThree.jpg"
-					class="dog-cycle" style="object-fit: cover; object-position: 50% 50%;"></img>
+					class="dog-cycle" style="object-fit: cover; object-position: 55% 55%;"></img>
 				</div>
 
 				<div class="cycle-images fade">
