--- a/dogs/dogs.html
+++ b/dogs/dogs.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Glada Tassar | Våra Hundar</title>
-		<link rel="shortcut icon" type="image/jpg" href="../img/favicon.png"/>
+		<link rel="shortcut icon" type="image/jpg" href="../img/logo/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 		<link rel="stylesheet" type="text/css" href="dogs.css">
 	</head>
