added active class and style

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -19,7 +19,7 @@
 			<nav class="navbar">
 				<a href="../index.html">Hem</a>
 				<a href="../service/service.html">Priser</a>
-				<a href="contact.html">Kontakt</a>
+				<a class="active" href="contact.html">Kontakt</a>
 				<a href="../dogs/dogs.html">Våra Hundar</a>
 				<a href="../gallery/gallery.html">Galleri</a>
 				<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
