--- a/dogs/dogs.html
+++ b/dogs/dogs.html
@@ -20,7 +20,7 @@
 				<a href="../index.html">Hem</a>
 				<a href="../service/service.html">Priser</a>
 				<a href="../contact/contact.html">Kontakt</a>
-				<a href="dogs.html">Våra Hundar</a>
+				<a class="active" href="dogs.html">Våra Hundar</a>
 				<a href="../gallery/gallery.html">Galleri</a>
 				<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
 			</nav>
