--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -21,7 +21,7 @@
 				<a href="../service/service.html">Priser</a>
 				<a href="../contact/contact.html">Kontakt</a>
 				<a href="../dogs/dogs.html">Våra Hundar</a>
-                <a href="gallery.html">Galleri</a>
+                <a class="active" href="gallery.html">Galleri</a>
 				<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
 			</nav>
 
