--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 
 			<nav class="navbar">
-				<a href="index.html">Hem</a>
+				<a class="active" href="index.html">Hem</a>
 				<a href="service/service.html">Priser</a>
 				<a href="contact/contact.html">Kontakt</a>
 				<a href="dogs/dogs.html">Våra Hundar</a>
