--- a/service/service.html
+++ b/service/service.html
@@ -17,7 +17,7 @@
 
 			<nav class="navbar">
 				<a href="../index.html">Hem</a>
-				<a href="service.html">Priser</a>
+				<a class="active" href="service.html">Priser</a>
 				<a href="../contact/contact.html">Kontakt</a>
 				<a href="../dogs/dogs.html">Våra Hundar</a>
 				<a href="../gallery/gallery.html">Galleri</a>
