--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
 
 			<section class="text-one">
 				<h2>Hunddagis</h2>
+				<p>Att ha en hund kräver ofta en hel del tid i form promenader och mental aktivering. Det är inte alltid lätt att hinna med arbetet, vardagen och ett aktivt hundägande. Därför kan man ibland vara tvungen att antingen lämna hunden ensam vissa stunder.
+					Andra gånger kanske man inte kan lämna hunden ensam, det kan vara för att ni lär vara borta längre än jordbruksverkets maximala tid (6 timmar) någon gång,
+					jobbar långa dagar eller att ni ska resa bort någonstans där hunden inte kan följa.
+					Ofta kan man då ta hjälp av familj och vänner som kan sköta om hunden medan man är borta, men ibland går inte det heller. ©
+				</p>
 				<p>
-					Här på Glada Tassar tar vi hand om din hund på bästa möjliga sätt. Anläggningen har standard efter gällande lag och bestämmelser.
+					Här på Glada Tassar tar vi hand om din hund på bästa möjliga sätt! Anläggningen har standard efter gällande lag och bestämmelser.
 				</p>
 					<ul>
 						<li>En grusad rastgård 45 kvm i anslutning till hunddagiset.</li>
@@ -62,9 +67,8 @@
 						<li>Varje rum är minst 15 kvm.</li>
 					</ul>
 				<p>
-					Vi går aldrig med mer än 3 hundar i varje promenad grupp. Alla rum i hunddagiset har soffor och leksaker.
-					Leksakerna byts ut regelbundet.
-					Hundarna har möjlighet att vara ute på rastgården när vi inte är på promenad, oftast är dom ute tillsammans med dem hundarna som de delar rum med.
+					Alla rum i hunddagiset har soffor, filtar och leksaker. Leksakerna byts ut regelbundet.
+					Hundarna har möjlighet att vara ute på rastgården när vi inte är på promenad, oftast är dom ute tillsammans med dem hundarna som de delar rum med. Dock ser vi alltid till att hundarna endast är med dom som dom går ihop med.
 				</p>
 			</section>
 
@@ -82,6 +86,12 @@
 				<h2>Upphämtning och lämning</h2>
 				<p>Vi erbjudar att både hämta och lämna din hund. Detta sker mellan 6:00 - 8:00 på morgonen för upphämtning och mellan 16:00 - 18:00 för lämning.
 					<br>Detta görs dock endast om du bor inom en mils radie från hunddagiset.
+				</p>
+
+				<h2 class="walks">Promenader</h2>
+				<p>Vi går aldrig med mer än 3 hundar i varje promenad grupp. På förmiddagen tar vi en längre promenad och på eftermiddag en kortare. Hundarna rastas i dom grupperna som dom delar rum med, detta görs med flera personal.
+					Hundarna som promenerar i en lite långsamare takt går för sig och hundarna som går lite fortare promenerar tillsammans.
+					Är det extremt dåligt väder såsom snöstorm, hällregn eller en tryckande hetta så tar vi inte lika långa promenader. Under promenaderna är hundarna alltid kopplade förutom i rastgårdar eller andra inhägnader.
 				</p>
 			</section>
 
